[package]
name = "rust-examples"
version = "0.1.0"
authors = ["Vui-Chee <vuicheesiew@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
rand = "0.7.3"
crossterm = "0.17"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
